--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".modulecommunication.ActivityClient" />
+
+        <service
+            android:name=".modulecommunication.ServiceService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
